# multi-agent-sql-assistant

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  implementation_summary.txt  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  ROADMAP.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/debug/: BuiltSQLPanel.tsx  InspectorCodePanel.tsx  ParamsPanel.tsx  QuerySpecPanel.tsx  VerifiedSQLPanel.tsx  WarningsPanel.tsx
frontend/src/components/layout/: AppLayout.tsx  Sidebar.tsx  TopBar.tsx
frontend/src/components/query/: QueryComposer.tsx  QueryHistory.tsx
frontend/src/components/result/: ResultStats.tsx  ResultTable.tsx
frontend/src/components/ui/: Badge.tsx  Button.tsx  Card.tsx  Input.tsx  (+3 more)
frontend/src/lib/: api.ts  types.ts  utils.ts
frontend/src/styles/: globals.css  theme.ts
scripts/: init_sample_db.py
src/: app.py  main.py
src/multi_agent_sql_assistant/: __init__.py  app.py  database.py  llm.py  observability.py  pipeline.py  schema_semantics.py  settings.py  types.py  upload_registry.py
src/multi_agent_sql_assistant/agents/: __init__.py  generator.py  planner.py  spec_verifier.py  sql_builder.py  verifier.py
src/multi_agent_sql_assistant/web/: app.js  index.html  styles.css
tests/: test_api.py  test_generator_llm.py  test_pipeline.py  test_queryspec_pipeline.py  test_sample_db_script.py  test_settings.py  test_smoke.py  test_upload_registry.py  test_verifier.py
(+1 files in other folders)
