[project]
name = "multi-agent-sql-assistant"
version = "0.1.0"
description = "Natural language to SQL with Planner/Generator/Verifier agents, schema-linking, and execution safety checks."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn>=0.30.0",
  "pydantic>=2.7.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "httpx>=0.27.0",
]

[tool.setuptools.package-data]
multi_agent_sql_assistant = ["web/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
